--- a/app/views/admin/badges/edit.html.haml
+++ b/app/views/admin/badges/edit.html.haml
@@ -1,4 +1,4 @@
-%h1 New Badge
+%h1 Edit Badge
 
 = form_for [ :admin, @badge ] do |f|
   = render 'form', f: f
@@ -10,4 +10,5 @@
     = check_box_tag "badge[user_ids][]", user.id, @badge.user_ids.include?(user.id), id: dom_id(user)
     = label_tag dom_id(user), user.name
 
-  = f.submit
+  .clear
+    = f.submit 'Update', class: 'btn btn-primary'
