--- a/app/views/admin/badges/edit.html.haml
+++ b/app/views/admin/badges/edit.html.haml
@@ -1,6 +1,6 @@
 %h1 Edit Badge
 
-= form_for [ :admin, @badge ] do |f|
+= form_for [ :admin, @badge ], html: { multipart: true } do |f|
   = render 'form', f: f
 
   %h3 Users
