Badge Images sizes and stuff

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,5 +2,5 @@
 
 %h2 Badges
 
-%table
-  %tbody= render partial: 'badge', collection: @user.badges
+.row
+  = render partial: 'badge', collection: @user.badges
