--- a/app/views/admin/badges/_badge.html.haml
+++ b/app/views/admin/badges/_badge.html.haml
@@ -1,4 +1,5 @@
 %tr
+  %td= image_tag badge.image.url(:micro)
   %td= badge.name
   %td= link_to 'Edit', edit_admin_badge_path(badge)
   %td= link_to 'Delete', admin_badge_path(badge), data: { method: :delete, confirm: 'Are you sure?' }
