--- a/app/views/admin/badges/edit.html.haml
+++ b/app/views/admin/badges/edit.html.haml
@@ -6,9 +6,10 @@
   %h3 Users
   = hidden_field_tag "badge[user_ids][]", nil
 
-  - User.all.each do |user|
-    = check_box_tag "badge[user_ids][]", user.id, @badge.user_ids.include?(user.id), id: dom_id(user)
-    = label_tag dom_id(user), user.name
+  - User.order(:name).all.each do |user|
+    .checkbox
+      = check_box_tag "badge[user_ids][]", user.id, @badge.user_ids.include?(user.id), id: dom_id(user)
+      = label_tag dom_id(user), user.name
 
   .clear
     = f.submit 'Update', class: 'btn btn-primary'
