--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -8,3 +8,7 @@
 
     .row
       = render partial: 'badge', collection: @user.badges
+
+    %h2 workshops
+
+    = render partial: 'workshop', collection: @user.workshops
