[https://trello.com/c/1wPlNX51/45-3-score-card-info-user]
* Adds before_filter to user controller
* Changes show user view logic to helper
* Creates user helper

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -6,7 +6,7 @@
     %h2 Biography
     %p= @user.bio
     %h2 Position
-    %p= @user.position.name unless @user.position.nil?
+    %p= position
     %h2 Skills
     %ul
       - @user.skills.each do |skill|
