[https://trello.com/c/V1q0dzpL/13-1-5-create-badges-admin] create badges admin
* Removes all related with badges

--- a/app/views/admin/main/index.html.haml
+++ b/app/views/admin/main/index.html.haml
@@ -1,4 +1,4 @@
 %h1 Achievables
 
-= link_to 'Badges', admin_badges_path
+= link_to 'Badges', badges_engine.badges_path
 = link_to 'Workshops', admin_workshops_path
