[https://trello.com/c/oBgAdg0z/14-3-create-awards-catalog-admin] Create Awards Catelog Admin
* Adds link to awards in admin section

--- a/app/views/admin/main/index.html.haml
+++ b/app/views/admin/main/index.html.haml
@@ -1,4 +1,5 @@
 %h1 Achievables
 
 = link_to 'Badges', badges_engine.badges_path
+= link_to 'Awards', badges_engine.awards_path
 = link_to 'Workshops', admin_workshops_path
