[https://trello.com/c/CneodubQ/19-3-propose-a-badge-user] Propose a badge (user)
* Add routes for badge proposals
* Add controller for badge proposals
* Adds link to user show
* creates new page for badge proposals

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -16,3 +16,5 @@
     = link_to 'Back to users', users_path
     |
     = link_to 'Edit user', edit_user_path(@user)
+    |
+    = link_to 'Propose a Badge', new_badge_proposal_path
