Change text in sign in link

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,2 +1,4 @@
 %h1 WELCOME TO KARDEX
-=link_to 'aseddasd',  users_index_path
+.google-sign-in
+  =link_to 'Sig in',  users_index_path
+  %p to your Crowdint account
