--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,4 +1,3 @@
 %header
   .logo
-    =link_to root_path do
-      =image_tag 'kardex-logo.png'
+    =link_to image_tag('kardex-logo.png'), root_path
