--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -15,8 +15,6 @@ h1 { text-align: center; }
     position: relative;
     top: 15px;
   }
-  a {
-    margin-left: 5px;
-  }
+  a { margin-left: 5px; }
   p { margin-left: 60px; }
 }
