--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,5 @@
 %h1 WELCOME TO KARDEX
 .google-sign-in
   = image_tag 'sign-in-icon.png'
-  =link_to 'Sig in',  users_index_path
+  =link_to 'Sign in',  user_path(current_user)
   %p to your Crowdint account
