Hide workshops section from achievables

--- a/app/views/admin/main/index.html.haml
+++ b/app/views/admin/main/index.html.haml
@@ -1,7 +1,7 @@
-%h1 Achievables
+%h1 Admin manager
 
+= link_to 'Users', users_path
+|
 = link_to 'Badges', badges_engine.badges_path
 |
 = link_to 'Awards', badges_engine.awards_path
-|
-= link_to 'Workshops', admin_workshops_path
