--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,3 +1,3 @@
 %header
   .logo
-    =link_to image_tag('kardex-logo.png'), root_path
+    =link_to image_tag('kardex-logo.png'), logo_redirect_url
