Remove 1 identation level

--- a/app/assets/stylesheets/users/show.css.scss
+++ b/app/assets/stylesheets/users/show.css.scss
@@ -2,13 +2,11 @@
   .square-box {
     background: grey;
     width: 250px;
-    .profile-picture {
-      img {
-        border-radius: 80px;
-        bottom: 90px;
-        left: 50px;
-        position: relative;
-      }
+    .profile-picture img {
+      border-radius: 80px;
+      bottom: 90px;
+      left: 50px;
+      position: relative;
     }
     .user-info {
       margin: -98px 0 0 22px;
