Create nominee monthly list
* Creates nominee list controller
* Adds nominee list resource to routes
* Adds link to nominee list creation
* Creates new view for nominee list

--- a/app/views/admin/main/index.html.haml
+++ b/app/views/admin/main/index.html.haml
@@ -7,3 +7,5 @@
 = link_to 'Awards', badges_engine.awards_path
 |
 = link_to 'Values', badges_engine.values_path
+|
+= link_to 'Create nominee list', new_admin_nominee_list_path
