--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -18,4 +18,4 @@
       |
       = link_to 'Edit user', edit_user_path(@user)
       |
-      = link_to 'Propose a Badge', new_badge_proposal_path
+      = link_to 'Nominate a user', new_nominee_user_path
