Show nominee list to users
* Add link to nominee lists in user show view
* Creates index and show views for nominee lists
* Creates nominee list partial

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -19,3 +19,5 @@
       = link_to 'Edit user', edit_user_path(@user)
       |
       = link_to 'Nominate a user', new_nominee_user_path
+      |
+      = link_to 'Nominate list', nominee_lists_path
