--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -21,3 +21,5 @@
       = link_to 'Nominate a user', new_nominee_user_path
       |
       = link_to 'Nominate list', nominee_lists_path
+      |
+      = link_to 'Propose a badge', new_propose_badge_path
