[https://trello.com/c/mDDc5kpd/55-2-propose-a-badge]
* Adds create method functionality for propose badges controller
* Fix relationships in propose badge and user models
* Adds checkboxes for propose badges new view

--- a/app/views/propose_badges/new.html.haml
+++ b/app/views/propose_badges/new.html.haml
@@ -25,13 +25,13 @@
     .col-sm-10
       = f.text_area :description
   .row
-    .col-sm-12
-      %input#users{ type: 'checkbox' }
-      %label{ for: 'users' } Propose users to this badge
-  .row
-    .col-sm-12
-      %input#user{ type: 'text' }
-      = link_to 'Agregar', '#'
+    .col-sm-2
+      = f.label :users
+    .col-sm-10
+      = f.collection_check_boxes :user_ids, User.all, :id, :name do |b|
+        %div
+          = b.check_box
+          = b.label
   .row
     .col-sm-12
       = f.submit
