--- a/app/views/admin/main/index.html.haml
+++ b/app/views/admin/main/index.html.haml
@@ -4,6 +4,8 @@
 |
 = link_to 'Badges', badges_engine.badges_path
 |
+= link_to 'Levels', badges_engine.levels_path
+|
 = link_to 'Awards', badges_engine.awards_path
 |
 = link_to 'Values', badges_engine.values_path
