--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,3 +1,6 @@
-%header
-  .logo
+%header.header
+  .header-right
+  .header-left
+  .circle
+  -#.logo
     =link_to image_tag('kardex-logo.png'), logo_redirect_url
