[https://trello.com/c/rmp1sydp/56-2-add-styles-for-login-user]
* Changes sprite badges image
* Adds styles for content seccion
* Adds html to home index

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,4 +8,4 @@
     WITH YOUR
     %strong CROWDINT ACCOUNT
   .google-sign-in-decorator
-= link_to '', 'www.crowdint.com'
+= link_to '', 'http://www.crowdint.com', class: 'crowdint-logo'
