--- a/app/assets/stylesheets/modules/google_sign_in.sass
+++ b/app/assets/stylesheets/modules/google_sign_in.sass
@@ -9,9 +9,12 @@
   width: 300px
 
 .google-sign-in-image
-  background-color: $gray
+  background: $gray image_url('sprite-badges.png') -15px -960px no-repeat
+  display: block
   float: left
+  height: 72px
   padding: 15px
+  width: 72px
 
 .google-sign-in-info
   color: black
