--- a/app/assets/stylesheets/modules/header.sass
+++ b/app/assets/stylesheets/modules/header.sass
@@ -1,6 +1,6 @@
 .header
   background: $pink
-  border: 1px solid $white
+  border-bottom: 1px solid $white
   height: 332px
   position: relative
   width: 100%
