[https://trello.com/c/rmp1sydp/56-2-add-styles-for-login-user]
* Changes sprite badge
* Removes fonts file
* Adds layout files for content and footer
* Adds modules and layout for main app file
* overriding bootstrap properties

--- a/app/assets/stylesheets/main_app.sass
+++ b/app/assets/stylesheets/main_app.sass
@@ -6,10 +6,15 @@
 @import 'bootstrap_overrides'
 @import 'base'
 
+// Layouts
+
+@import 'layouts/content'
+@import 'layouts/footer'
+
 // Modules
 
 @import 'modules/header'
 @import 'modules/circle'
 @import 'modules/welcome'
 @import 'modules/google_sign_in'
-@import 'modules/crowdint_logo'
+@import 'modules/logos'
