[https://trello.com/c/rmp1sydp/56-2-add-styles-for-login-user]
* Adds classes to home#index page
* Adds classes for application layout

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,7 +2,7 @@
   Welcome to
   .welcome-image
 .google-sign-in
-  = image_tag 'sign-in-icon.png', class: 'google-sign-in-image'
+  .google-sign-in-image
   %p.google-sign-in-info
     = link_to 'SIGN IN', redirect_url
     WITH YOUR
