--- a/app/assets/stylesheets/fonts/fonts.sass
+++ b/app/assets/stylesheets/fonts/fonts.sass
@@ -3,3 +3,6 @@
   font-style: normal
   font-weight: 400
   src: local('Roboto Regular'), local('Roboto-Light'), url(http://themes.googleusercontent.com/static/fonts/roboto/v11/CrYjSnGjrRCn0pd9VQsnFOvvDin1pK8aKteLpeZ5c0A.woff) format('woff')
+
+@font-face
+  @import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Droid+Serif:400,700,400italic,700italic)
