[https://trello.com/c/rmp1sydp/56-2-add-styles-for-login-user]
* Adds transitions and hovers to logos and google sign in info
* Adds orange color
* Fix footer layout

--- a/app/assets/stylesheets/layouts/footer.sass
+++ b/app/assets/stylesheets/layouts/footer.sass
@@ -4,5 +4,7 @@
   ul
     list-style-type: none
     li
-      float: left
-      margin-top: 12px
+      display: block
+      margin: 12px auto
+    .crowdint-logo
+      display: none
