--- a/app/assets/stylesheets/main_app.sass
+++ b/app/assets/stylesheets/main_app.sass
@@ -1,6 +1,5 @@
 // Main files and styles
 
-@import 'fonts/fonts'
 @import 'colors'
 @import 'bootstrap_settings'
 @import 'bootstrap_overrides'
@@ -8,12 +7,12 @@
 
 // Layouts
 
+@import 'layouts/header'
 @import 'layouts/content'
 @import 'layouts/footer'
 
 // Modules
 
-@import 'modules/header'
 @import 'modules/circle'
 @import 'modules/welcome'
 @import 'modules/google_sign_in'
