--- a/app/assets/stylesheets/modules/logos.sass
+++ b/app/assets/stylesheets/modules/logos.sass
@@ -2,12 +2,15 @@
   background: image_url('sprite-badges.png') -28px -135px no-repeat
   display: inline-block
   height: 35px
-  width: 100px
+  width: 75px
 
 .culture-logo
-  background: image_url('sprite-badges.png') -28px -183px no-repeat
+  background: image_url('sprite-badges.png') 25px -1043px no-repeat
   display: inline-block
   font-size: 14px
   height: 35px
   text-align: right
   width: 200px
+  &:hover
+    background: image_url('sprite-badges.png') 25px -1083px no-repeat
+    transition: background 0.25s linear
