[https://trello.com/c/rmp1sydp/56-2-add-styles-for-login-user]
* Fix failing specs
* Adds classes to home#index view

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,8 +4,8 @@
 .google-sign-in
   .google-sign-in-image
   %p.google-sign-in-info
-    = link_to 'SIGN IN', redirect_url
-    WITH YOUR
-    %strong CROWDINT ACCOUNT
+    = link_to redirect_url do
+      SIGN IN WITH YOUR
+      %strong CROWDINT ACCOUNT
   .google-sign-in-decorator
 = link_to '', 'http://www.crowdint.com', class: 'crowdint-logo'
