--- a/app/assets/stylesheets/modules/users.sass
+++ b/app/assets/stylesheets/modules/users.sass
@@ -40,6 +40,12 @@
       font-size: 14px
       font-style: normal
       font-weight: 500
+      text-align: left
     .nav > li
+      border-right: 1px solid #282928
+      color: #282928
       float: left
-      margin-right: 3px
+      margin-right: 10px
+      padding-right: 10px
+      &:last-child
+        border-right: none
