[https://trello.com/c/rmp1sydp/56-2-add-styles-for-login-user]
* Sorts css properties alphabetically
* Adds fonts url to stylesheets
* Sorts colors alphabetically

--- a/app/assets/stylesheets/main_app.sass
+++ b/app/assets/stylesheets/main_app.sass
@@ -1,8 +1,9 @@
 // Main files and styles
 
+@import url(http://fonts.googleapis.com/css?family=Droid+Serif|Roboto:300,500,400)
 @import 'colors'
-@import 'bootstrap_settings'
 @import 'bootstrap_overrides'
+@import 'bootstrap_settings'
 @import 'base'
 
 // Layouts
