--- a/app/assets/stylesheets/modules/google_sign_in.sass
+++ b/app/assets/stylesheets/modules/google_sign_in.sass
@@ -1,7 +1,7 @@
 .google-sign-in
   background: $white
-  border-top: 1px solid $pink
   border-bottom: 1px solid $pink
+  border-top: 1px solid $pink
   height: 75px
   margin: 60px auto 20px
   position: relative
@@ -18,16 +18,17 @@
 
 .google-sign-in-info
   color: black
-  padding: 20px 0px 15px 97px
-  line-height: 16px
-  text-align: left
   font-size: 14px
+  line-height: 16px
+  padding: 20px 0px 15px 97px
+  text-align: left
+  text-transform: uppercase
   a
     color: black
     &:hover
       color: $orange
-      transition: color 0.5s
       text-decoration: none
+      transition: color 0.5s
 
 .google-sign-in-decorator
   background: image_url('sprite-badges.png') -18px -874px
