[https://trello.com/c/rmp1sydp/56-2-add-styles-for-login-user]
* Removes comment code
* changes to downcase sign in page text
* Removes link tag with stylesheet

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,7 +5,7 @@
   .google-sign-in-image
   %p.google-sign-in-info
     = link_to redirect_url do
-      SIGN IN WITH YOUR
-      %strong CROWDINT ACCOUNT
+      Sign in with your
+      %strong crowdint account
   .google-sign-in-decorator
 = link_to '', 'http://www.crowdint.com', class: 'crowdint-logo'
