Add sprite icon

--- a/app/assets/stylesheets/modules/users.sass
+++ b/app/assets/stylesheets/modules/users.sass
@@ -41,6 +41,11 @@
       font-style: normal
       font-weight: 500
       text-align: left
+    .title-summary-image
+      background: url(/assets/sprite-badges.png) -24px -450px
+      height: 30px
+      margin: 0 auto
+      width: 30px
     .nav > li
       border-right: 1px solid #282928
       color: #282928
