--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -7,6 +7,7 @@
       %p.position= position
       %hr
       %h3.title Summary
+      .title-summary-image
       %p.summary-info= @user.bio
       %h3.title Skills
       %ul.nav
