Adding height to container

--- a/app/assets/stylesheets/modules/users.sass
+++ b/app/assets/stylesheets/modules/users.sass
@@ -1,6 +1,8 @@
 #user-show .square-box
   background: #fff
+  height: 360px
   width: 250px
+
   .profile-picture img
     border-radius: 80px
     border: 3px solid #fff
@@ -43,8 +45,15 @@
       text-align: left
     .title-summary-image
       background: url(/assets/sprite-badges.png) -24px -450px
+      float: left
       height: 30px
-      margin: 0 auto
+      margin: 0 5px 0 0
+      width: 30px
+    .title-skills-image
+      background: url(/assets/sprite-badges.png) -24px -403px
+      float: left
+      height: 30px
+      margin: 0 5px 0 0
       width: 30px
     .nav > li
       border-right: 1px solid #282928
