Move droid font to configuration file

--- a/app/assets/stylesheets/main_app.sass
+++ b/app/assets/stylesheets/main_app.sass
@@ -1,6 +1,7 @@
 // Main files and styles
 
 @import url(http://fonts.googleapis.com/css?family=Droid+Serif|Roboto:300,500,400)
+@import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Droid+Serif:400,700,400italic,700italic)
 @import 'colors'
 @import 'bootstrap_overrides'
 @import 'bootstrap_settings'
@@ -17,4 +18,3 @@
 @import 'modules/circle'
 @import 'modules/google_sign_in'
 @import 'modules/logos'
-@import 'modules/users'
