--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,27 +1,32 @@
+= stylesheet_link_tag 'sections/user/dashboard'
 %aside#user-show
   .row.square-box
     .profile-picture
       = image_tag @user.picture_url
     .user-info
       %h3.name= @user.name
-      %p.position= position
-      %hr
-      .title-summary-image
+      .position= position
+      %hr.big-bar.color-bar
+      = link_to_admin
+      .title-summary-ico
       %h3.title Summary
-      %p.summary-info= @user.bio
-      %hr
-      .title-skills-image
+      .summary-info= @user.bio
+      %hr.small-bar.color-bar
+      .title-skills-ico
       %h3.title Skills
       %ul.nav
         - @user.skills.each do |skill|
           %li= skill.name
-  .navi.account
-    = link_to 'Back to users', users_path
-    |
-    = link_to 'Edit user', edit_user_path(@user)
-    |
-    = link_to 'Nominate a user', new_nominee_user_path
-    |
-    = link_to 'Nominate list', nominee_lists_path
-    |
-    = link_to 'Propose a badge', new_propose_badge_path
+      %hr.big-bar.color-bar-light
+      .title-account-ico
+      %h3.title
+        =link_to 'Account', '#'
+      .bottom-flag-corner
+      .account
+        = link_to 'Edit user', edit_user_path(@user)
+        |
+        = link_to 'Nominate a user', new_nominee_user_path
+        |
+        = link_to 'Nominate list', nominee_lists_path
+        |
+        = link_to 'Propose a badge', new_propose_badge_path
