--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -20,11 +20,9 @@
       %hr.big-bar.color-bar-light
       .title-account-ico
       %h3.title
-        =link_to 'Account', '#'
+        =link_to 'Account', edit_user_path(@user)
       .bottom-flag-corner
       .account
-        = link_to 'Edit user', edit_user_path(@user)
-        |
         = link_to 'Nominate a user', new_nominee_user_path
         |
         = link_to 'Nominate list', nominee_lists_path
