Refactor sass stylesheets
* Add colors variables
* Extending classes
* Changing users show html

--- a/app/assets/stylesheets/colors.sass
+++ b/app/assets/stylesheets/colors.sass
@@ -1,3 +1,4 @@
+$gray-dark: #282928
 $gray: #EDEDED
 
 $orange: #D44928
@@ -5,4 +6,5 @@ $orange: #D44928
 $pink-light: #F9DDDA
 $pink: #EBA299
 
-$white: white
+$white: #fff
+
