--- a/app/assets/stylesheets/main_app.sass
+++ b/app/assets/stylesheets/main_app.sass
@@ -18,3 +18,7 @@
 @import 'modules/circle'
 @import 'modules/google_sign_in'
 @import 'modules/logos'
+
+
+// Sections
+@import 'sections/user/dashboard'
