--- a/app/views/layouts/dashboards.html.haml
+++ b/app/views/layouts/dashboards.html.haml
@@ -2,14 +2,15 @@
 %html
   %head
     %title KardexCrowdintCom
-    = stylesheet_link_tag    'application', media: 'all'
+    = stylesheet_link_tag 'application', media: 'all'
+    = stylesheet_link_tag 'sections/home/welcome'
     = javascript_include_tag 'application'
     = csrf_meta_tags
   %body
-    %header.header.header-home
-      .header-right
-      .header-left
+    .header-dashboards
+      .header-vertical-line
       .circle
+      .welcome-image
     = notice
     #content
       .container
