--- a/app/assets/stylesheets/modules/circle.sass
+++ b/app/assets/stylesheets/modules/circle.sass
@@ -3,7 +3,6 @@
   border-radius: 50%
   display: inline-block
   height: 84px
-  left: 47.7%
+  margin-left: -42px
   position: absolute
-  top: 87%
   width: 84px
