[https://trello.com/c/ClupdPSR/62-1-adds-style-for-badges-in-user-section]
* Adds new colors
* Adds module for badges
* Fix styles for some sections of the page

--- a/app/assets/stylesheets/colors.sass
+++ b/app/assets/stylesheets/colors.sass
@@ -1,10 +1,15 @@
 $gray-dark: #282928
 $gray: #EDEDED
+$gray-light: #939393
 
 $orange: #D44928
+$orange-dark: #AA392D
 
-$pink-light: #F9DDDA
-$pink: #EBA299
+$pink-100: #F9DDDA
+$pink-50: #EAA399
+$pink-25: #EBA299
+
+$yellow: #EF911F
 
 $white: #fff
 
