--- a/app/assets/stylesheets/layouts/header.sass
+++ b/app/assets/stylesheets/layouts/header.sass
@@ -1,5 +1,5 @@
 = header($height)
-  background: $pink
+  background: $pink-25
   border-bottom: 1px solid $white
   height: $height
   position: relative
@@ -17,7 +17,7 @@
     left: 50%
     top: 40%
   .header-vertical-line
-    background: $pink-light
+    background: $pink-100
     height: 80px
     margin: 0 auto
     width: 2px
@@ -28,13 +28,13 @@
   +header(100px)
 
 .header-right
-  border-left: 1px solid $pink-light
+  border-left: 1px solid $pink-100
   float: right
   height: 332px
   width: 50%
 
 .header-left
-  border-right: 1px solid $pink-light
+  border-right: 1px solid $pink-100
   float: left
   height: 332px
   width: 50%
