--- a/app/assets/stylesheets/main_app.sass
+++ b/app/assets/stylesheets/main_app.sass
@@ -18,7 +18,8 @@
 @import 'modules/circle'
 @import 'modules/google_sign_in'
 @import 'modules/logos'
+@import 'modules/badges'
 
 // Sections
 
-@import 'sections/user/dashboard'
+//@import 'sections/user/dashboard'
