--- a/app/assets/stylesheets/modules/google_sign_in.sass
+++ b/app/assets/stylesheets/modules/google_sign_in.sass
@@ -1,7 +1,7 @@
 .google-sign-in
   background: $white
-  border-bottom: 1px solid $pink
-  border-top: 1px solid $pink
+  border-bottom: 1px solid $pink-25
+  border-top: 1px solid $pink-25
   height: 75px
   margin: 60px auto 20px
   position: relative
@@ -12,9 +12,9 @@
   background: $gray image_url('sprite-badges.png') -15px -964px no-repeat
   display: block
   float: left
-  height: 72px
+  height: 73px
   padding: 15px
-  width: 72px
+  width: 73px
 
 .google-sign-in-info
   color: black
