--- a/app/assets/stylesheets/modules/circle.sass
+++ b/app/assets/stylesheets/modules/circle.sass
@@ -1,5 +1,5 @@
 .circle
-  background: $pink-light image_url('sprite-badges.png') -4px -4px no-repeat
+  background: $pink-100 image_url('sprite-badges.png') -4px -4px no-repeat
   border-radius: 50%
   display: inline-block
   height: 84px
