--- a/app/assets/stylesheets/main_app.sass
+++ b/app/assets/stylesheets/main_app.sass
@@ -19,6 +19,8 @@
 @import 'modules/google_sign_in'
 @import 'modules/logos'
 @import 'modules/badges'
+@import 'modules/profile'
+@import 'modules/user_links'
 
 // Sections
 
