--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,33 +1,48 @@
 .row
   %aside.col-md-3
-    .span3
-      .profile-picture
-        = image_tag @user.picture_url
-      .user-info
-        %h3.name= @user.name
-        .position= position
-        %hr.big-bar.color-bar
-        = link_to_admin
-        .summary-ico
-        %h3.title Summary
-        .summary-info= @user.bio
-        %hr.small-bar.color-bar
-        .skills-ico
-        %h3.title Skills
-        %ul.nav
+    .span3.profile
+      = image_tag @user.picture_url, class: 'profile-image'
+      .profile-info-main
+        %h3.profile-name= @user.name
+        .profile-position= position
+      %hr.profile-separator
+      = link_to_admin
+      .profile-info
+        %h3.profile-title
+          %span.profile-summary-ico
+          Summary
+        %p.profile-summary= @user.bio
+        %hr.profile-separator
+      .profile-info
+        %h3.profile-title
+          %span.profile-summary-ico
+          Skills
+        %ul.profile-summary
           - @user.skills.each do |skill|
-            %li= skill.name
-        %hr.big-bar.color-bar-light
-        .account-ico
-        %h3.title
-          =link_to 'Account', edit_user_path(@user)
-        .bottom-flag-corner
-        .account
-          = link_to 'Nominate a user', new_nominee_user_path
-          |
-          = link_to 'Nominate list', nominee_lists_path
-          |
-          = link_to 'Propose a badge', new_propose_badge_path
+            %li.profile-skill= skill.name
+        %hr.profile-separator.light
+      .profile-info
+        %h3.profile-title
+          %span.profile-summary-ico
+          Position
+        %p.profile-summary
+          %strong= @user.department
+          %br
+          = position
+      %hr.profile-separator.light
+      .profile-info
+        %h3.profile-account
+          = link_to edit_user_path(@user) do
+            %span.profile-summary-ico
+            Account
+    .span3.user-links
+      |
+      = link_to 'Nominate a user', new_nominee_user_path
+      |
+      = link_to 'Nominate list', nominee_lists_path
+      |
+      = link_to 'Propose a badge', new_propose_badge_path
+      |
   %section.badges.col-md-9
     .row
       %header.badges-header-container
