--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -9,13 +9,13 @@
       = link_to_admin
       .profile-info
         %h3.profile-title
-          %span.profile-summary-ico
+          %span.profile-ico-summary
           Summary
         %p.profile-summary= @user.bio
         %hr.profile-separator
       .profile-info
         %h3.profile-title
-          %span.profile-summary-ico
+          %span.profile-ico-skills
           Skills
         %ul.profile-summary
           - @user.skills.each do |skill|
@@ -23,7 +23,7 @@
         %hr.profile-separator.light
       .profile-info
         %h3.profile-title
-          %span.profile-summary-ico
+          %span.profile-ico-position
           Position
         %p.profile-summary
           %strong= @user.department
@@ -33,8 +33,9 @@
       .profile-info
         %h3.profile-account
           = link_to edit_user_path(@user) do
-            %span.profile-summary-ico
+            %span.profile-ico-account
             Account
+        .profile-footer-icon
     .span3.user-links
       |
       = link_to 'Nominate a user', new_nominee_user_path
