[https://trello.com/c/ClupdPSR/62-1-adds-style-for-badges-in-user-section]
* Fix all styles
* Final html markup

--- a/app/assets/stylesheets/modules/badges.sass
+++ b/app/assets/stylesheets/modules/badges.sass
@@ -11,6 +11,15 @@
 
 .badges-header-container
   border-bottom: 1px solid $pink-50
+  position: relative
+
+.badges-header-decorator
+  background: image_url('sprite-badges.png') -25px -805px no-repeat
+  height: 45px
+  position: absolute
+  top: 15px
+  right: -9px
+  width: 25px
 
 .badges-header-image
   background: image_url('sprite-badges.png') -27px -585px no-repeat
