Preparing Admin for users section

--- a/app/assets/stylesheets/colors.sass
+++ b/app/assets/stylesheets/colors.sass
@@ -1,10 +1,15 @@
 $gray-dark: #282928
+$gray-25: #A5A2A2
 $gray: #EDEDED
 
 $orange: #D44928
 
 $pink-light: #F9DDDA
 $pink: #EBA299
+$pink-100: #F9DDDA
+$pink-50: #EAA399
+$pink-25: #EBA299
+
 
 $white: #fff
 
