--- a/app/assets/stylesheets/layouts/header.sass
+++ b/app/assets/stylesheets/layouts/header.sass
@@ -1,18 +1,61 @@
-.header
-  background: $pink
+= header($height)
+  background: #eaaaa1
   border-bottom: 1px solid $white
-  height: 332px
+  height: $height
   position: relative
   width: 100%
 
+.header-default
+  +header(100px)
+  .circle
+    left: 48%
+    top: 8%
+  .header-vertical-line
+    background: $pink-100
+    height: 80px
+    margin: 0 auto
+    width: 2px
+  .container
+    width: 1140px
+    margin-top: -81px
+    background: $pink-25
+    .profile-info
+      width: 227px
+      left: - 15px
+      height: 100px
+      background: $pink-100
+      position: relative
+      .picture > img
+        margin: 16px 0 0 14px
+        border-radius: 88px
+        float: left
+        width: 70px
+        height: 70px
+        border: 3px solid #fff
+      .name
+        font-size: 12px
+        font-weight: bold
+        font-family: 'Droid Serif', serif
+        position: relative
+        top: 30px
+        left: 10px
+      .position
+        font-family: 'Roboto'
+        font-size: 12px
+        font-style: normal
+        position: relative
+        top: 30px
+        left: 10px
+
+
 .header-right
-  border-left: 1px solid $pink-light
+  border-left: 1px solid $pink-100
   float: right
   height: 332px
   width: 50%
 
 .header-left
-  border-right: 1px solid $pink-light
+  border-right: 1px solid $pink-100
   float: left
   height: 332px
   width: 50%
