--- a/app/assets/stylesheets/main_app.sass
+++ b/app/assets/stylesheets/main_app.sass
@@ -9,6 +9,7 @@
 
 // Layouts
 
+
 @import 'layouts/header'
 @import 'layouts/content'
 @import 'layouts/footer'
@@ -18,6 +19,7 @@
 @import 'modules/circle'
 @import 'modules/google_sign_in'
 @import 'modules/logos'
+@import 'modules/admin'
 
 // Sections
 
