[https://trello.com/c/ClupdPSR/62-1-adds-style-for-badges-in-user-section]
* Updates user controller to get user badges
* Adds method in user helper to get badges
* Create partial for badges

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -56,13 +56,10 @@
         .badges-header-decorator
     .row
       .badges-all
-        - badges = BadgesEngine::Badge.all
-        - badges.all.each do |badge|
-          .badge-info
-            = image_tag 'no-image.svg'
-            .badge-name
-              = badge.name
+        = show_badges
     .row
       %footer.badges-footer
-        %p Displaying my last 10 badges
+        %p
+          Displaying my last
+          = pluralize(@badges.size, 'badge')
         .badges-footer-icon
