--- a/app/assets/stylesheets/modules/admin.sass
+++ b/app/assets/stylesheets/modules/admin.sass
@@ -33,6 +33,8 @@
       margin-top: 22px
       float: right
       margin-right: 50px
+      font-weight: bold
+      font-family: roboto
   .mid-flag-corner
     background: url(/assets/sprite-badges.png) -12px -796px
     top: -40px
@@ -41,3 +43,42 @@
     left: 20px
     position: relative
     width: 50px
+
+.admin-settings-control
+  nav .container-fluid
+    padding-left: 0
+    padding-right: 0
+  nav .nav
+    a
+      width: 150px
+      float: left
+      height: 68px
+      &:active, &:hover
+        background: #fff
+        .carpet-down
+          width: 0
+          height: 0
+          border-left: 10px solid transparent
+          border-right: 10px solid transparent
+          border-top: 10px solid #fff
+          position: relative
+          bottom: 10px
+          margin: 0 auto
+      p
+        text-align: center
+        margin-top: 14px
+    .user-admin-icon
+      background: url(/assets/sprite-badges.png) -11px -1128px
+      bottom: 28px
+      height: 35px
+      left: 0px
+      position: relative
+      width: 35px
+    .badge-admin-icon
+      background: url(/assets/sprite-badges.png) -11px -1168px
+      bottom: 28px
+      height: 35px
+      left: 0px
+      position: relative
+      width: 35px
+
